--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Slot Machine Challenge</title>
+  <title>Slot Machineee Challenge</title>
   <link rel="stylesheet" href="static/css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,10 +17,10 @@
 
     <div id="info">
       <div class="saldo-container">
-        <span id="saldo"></span>
+        <span id="Kontostand"></span>
       </div>
       <div class="valor-container">
-        <span id="valor"></span>
+        <span id="Dein Gebot"></span>
       </div>
     </div>
 
@@ -43,7 +43,7 @@
     </div>
 
     <div class="buttons">
-      <button id="start">Jogar</button>
+      <button id="start">Gamblen</button>
     </div>
 
     <div id="winimage">
